--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,13 @@ alembic==1.18.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
+bcrypt==5.0.0
+cffi==2.0.0
 click==8.3.1
+cryptography==46.0.3
+dnspython==2.8.0
 ecdsa==0.19.1
+email-validator==2.3.0
 fastapi==0.128.0
 h11==0.16.0
 idna==3.11
@@ -12,6 +17,7 @@ MarkupSafe==3.0.3
 passlib==1.7.4
 psycopg2-binary==2.9.11
 pyasn1==0.6.1
+pycparser==2.23
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
