--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ alembic==1.18.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
-bcrypt==5.0.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==25.1.0
 cffi==2.0.0
 click==8.3.1
 cryptography==46.0.3
@@ -14,7 +15,6 @@ h11==0.16.0
 idna==3.11
 Mako==1.3.10
 MarkupSafe==3.0.3
-passlib==1.7.4
 psycopg2-binary==2.9.11
 pyasn1==0.6.1
 pycparser==2.23
